objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox: the donor has been acknowledged and thanked for their donation.</description>
        <inlineHelpText>The donor has been acknowledged and thanked for their donation.</inlineHelpText>
        <label>Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Date__c</fullName>
        <description>Date: the date the donor was acknowledged and thanked for this donation.</description>
        <label>Acknowledgement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Method__c</fullName>
        <description>Picklist: the methods by which the donor received thanks and acknowledgement for this donation.</description>
        <label>Acknowledgement Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Notes__c</fullName>
        <description>Text: any notes about the acknowledgement that the donor ought to receive.</description>
        <inlineHelpText>Notes about acknowledgement. Include tax info? Mention a specific program?</inlineHelpText>
        <label>Acknowledgement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Acknowledgement_Received__c</fullName>
        <description>Text: the name of the acknowledgement message received.</description>
        <label>Acknowledgement Received</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>